---
source: crates/kirin-derive-dialect/src/field/tests.rs
expression: "case!\n{\n    #[kirin(type = ArithType)] pub enum ArithInstruction<T>\n    {\n        Add(SSAValue, Vec<SSAValue>, ResultValue, T),\n        Sub(SSAValue, Vec<SSAValue>, ResultValue, T),\n        Mul(SSAValue, Vec<SSAValue>, ResultValue),\n        Div(SSAValue, Vec<SSAValue>, ResultValue),\n    }\n}"
---
#[automatically_derived]
impl<'a, T> kirin::ir::HasArguments<'a> for ArithInstruction<T> {
    type Iter = ArithInstructionArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::Add(field_0, field_1, field_2, field_3) => {
                ArithInstructionArgumentsIter::Add(std::iter::once(field_0).chain(field_1.iter()))
            }
            Self::Sub(field_0, field_1, field_2, field_3) => {
                ArithInstructionArgumentsIter::Sub(std::iter::once(field_0).chain(field_1.iter()))
            }
            Self::Mul(field_0, field_1, field_2) => {
                ArithInstructionArgumentsIter::Mul(std::iter::once(field_0).chain(field_1.iter()))
            }
            Self::Div(field_0, field_1, field_2) => {
                ArithInstructionArgumentsIter::Div(std::iter::once(field_0).chain(field_1.iter()))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum ArithInstructionArgumentsIter<'a> {
    Add(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::slice::Iter<'a, kirin::ir::SSAValue>,
        >,
    ),
    Sub(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::slice::Iter<'a, kirin::ir::SSAValue>,
        >,
    ),
    Mul(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::slice::Iter<'a, kirin::ir::SSAValue>,
        >,
    ),
    Div(
        std::iter::Chain<
            std::iter::Once<&'a kirin::ir::SSAValue>,
            std::slice::Iter<'a, kirin::ir::SSAValue>,
        >,
    ),
}
#[automatically_derived]
impl<'a> Iterator for ArithInstructionArgumentsIter<'a> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Add(inner) => inner.next(),
            Self::Sub(inner) => inner.next(),
            Self::Mul(inner) => inner.next(),
            Self::Div(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a, T> kirin::ir::HasArgumentsMut<'a> for ArithInstruction<T> {
    type IterMut = ArithInstructionArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Add(field_0, field_1, field_2, field_3) => ArithInstructionArgumentsMutIter::Add(
                std::iter::once(field_0).chain(field_1.iter_mut()),
            ),
            Self::Sub(field_0, field_1, field_2, field_3) => ArithInstructionArgumentsMutIter::Sub(
                std::iter::once(field_0).chain(field_1.iter_mut()),
            ),
            Self::Mul(field_0, field_1, field_2) => ArithInstructionArgumentsMutIter::Mul(
                std::iter::once(field_0).chain(field_1.iter_mut()),
            ),
            Self::Div(field_0, field_1, field_2) => ArithInstructionArgumentsMutIter::Div(
                std::iter::once(field_0).chain(field_1.iter_mut()),
            ),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum ArithInstructionArgumentsMutIter<'a> {
    Add(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::slice::IterMut<'a, kirin::ir::SSAValue>,
        >,
    ),
    Sub(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::slice::IterMut<'a, kirin::ir::SSAValue>,
        >,
    ),
    Mul(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::slice::IterMut<'a, kirin::ir::SSAValue>,
        >,
    ),
    Div(
        std::iter::Chain<
            std::iter::Once<&'a mut kirin::ir::SSAValue>,
            std::slice::IterMut<'a, kirin::ir::SSAValue>,
        >,
    ),
}
#[automatically_derived]
impl<'a> Iterator for ArithInstructionArgumentsMutIter<'a> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Add(inner) => inner.next(),
            Self::Sub(inner) => inner.next(),
            Self::Mul(inner) => inner.next(),
            Self::Div(inner) => inner.next(),
        }
    }
}
